// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Stats when calling mapStateToProps() it should respond with props 1`] = `
Object {
  "authors": 1,
  "commits": 5,
  "files": 13,
  "isFileSelected": false,
  "linesAdded": 96,
  "linesDeleted": 667,
  "maxAuthorDate": 1537541919,
  "minAuthorDate": 1526296167,
  "viewCommitsOrFiles": "commits",
}
`;

exports[`containers/Stats when rendered and a directory is selected it should match snapshot (it should be showing Commits selected) 1`] = `
<div
  style={
    Object {
      "background": "white",
      "borderRadius": 3,
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": -10,
      "marginRight": 10,
      "padding": 10,
      "paddingBottom": 0,
    }
  }
>
  <Component
    label="Authors"
  >
    <CommaNumber
      value={5}
    />
  </Component>
  <Component
    label="Active Time Span"
  >
    <EpochSpan
      firstEpochTime={1536691136}
      secondEpochTime={1538663085}
    />
  </Component>
  <Component
    label="Last Commit"
  >
    <div>
      <EpochSpan
        firstEpochTime={1538663085}
        secondEpochTime={1539563458}
      />
      <span>
         ago
      </span>
    </div>
  </Component>
  <Component
    label="Lines Added"
  >
    <CommaNumber
      value={700}
    />
  </Component>
  <Component
    label="Lines Deleted"
  >
    <CommaNumber
      value={300}
    />
  </Component>
  <Component
    isSelected={false}
    label="Commits"
    onLabelClick={[Function]}
    title="Click to view Commits"
  >
    <CommaNumber
      value={52}
    />
  </Component>
  <Component
    isSelected={true}
    label="Files"
    onLabelClick={null}
    title="Click to view Files"
  >
    <CommaNumber
      value={110}
    />
  </Component>
</div>
`;

exports[`containers/Stats when rendered test props it should match snapshot (it should be showing empty indicator) 1`] = `
<div
  style={
    Object {
      "background": "white",
      "borderRadius": 3,
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": -10,
      "marginRight": 10,
      "padding": 10,
      "paddingBottom": 0,
    }
  }
>
  <Component
    label="Authors"
  >
    <CommaNumber
      value={5}
    />
  </Component>
  <Component
    label="Active Time Span"
  >
    <EpochSpan
      firstEpochTime={1536691136}
      secondEpochTime={1538663085}
    />
  </Component>
  <Component
    label="Last Commit"
  >
    <div>
      <EpochSpan
        firstEpochTime={1538663085}
        secondEpochTime={1539563458}
      />
      <span>
         ago
      </span>
    </div>
  </Component>
  <Component
    label="Lines Added"
  >
    <CommaNumber
      value={700}
    />
  </Component>
  <Component
    label="Lines Deleted"
  >
    <CommaNumber
      value={300}
    />
  </Component>
  <Component
    isSelected={true}
    label="Commits"
    onLabelClick={[Function]}
    title="Click to view Commits"
  >
    <CommaNumber
      value={52}
    />
  </Component>
  <Component
    isSelected={false}
    label="Files"
    onLabelClick={[Function]}
    title="Click to view Files"
  >
    <CommaNumber
      value={110}
    />
  </Component>
</div>
`;
